color no longer flickers when merging

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -32,6 +32,7 @@
 
 .game {
     position: relative;
+    transform-origin: center;
     width: 85%;
     height: 85%;
     top: 0;
