--- a/src/app/game/tile/tile.component.css
+++ b/src/app/game/tile/tile.component.css
@@ -6,11 +6,12 @@ h1{
 
 .tile {
     display: flex;
-    flex-grow: 1;
     position: absolute;
+    flex-grow: 1;
     width: 22%;
     height: 22%;
     transform-origin: center;
+    transform: scale(0.5);
     background-color: #c2c2c0;
     transition-property: all;
     transition-duration: 100ms;
